data/derived/comb/progs/unify/prog0666.ml.out
Characters 40-43:
  "[" ^ (List.map ";" sepConcat) ^ "]";;
                  ^^^
Error: This expression has type string but an expression was expected of type
         'a -> 'b
